syntax = "proto3";

package PokemonGo.RocketAPI.GeneratedCode;

message FortSearchResponse {
  int32 unknown1 = 1;
  int64 unknown2 = 2;
  string api_url = 3;
  Unknown6 unknown6 = 6;
  Unknown7 unknown7 = 7;
  repeated Payload payload = 100;
  string errorMessage = 101; //Should be moved to an error-proto file if error is always 101 field

  message Unknown6 {
    int32 unknown1 = 1;
    Unknown2 unknown2 = 2;

    message Unknown2 {
      bytes unknown1 = 1;
    }

  }

  message Unknown7 {
    bytes unknown71 = 1;
    int64 unknown72 = 2;
    bytes unknown73 = 3;
  }

  message Payload {
	int32 Result = 1;
	repeated Item Items = 2;
	int32 GemsAwarded = 3;
	int32 EggPokemon = 4;
	int32 XpAwarded = 5;
	int64 CooldownComplete = 6;
	int32 ChainHackSequenceNumber = 7;
}

	message Item
	{
		int32 Item = 1;
		int32 ItemCount = 2;
	}
  
  }