syntax = "proto3";

package PokemonGo.RocketAPI.GeneratedCode;

message MapObjectsResponse {
  int32 unknown1 = 1;
  int64 unknown2 = 2;
  string api_url = 3;
  Unknown6 unknown6 = 6;
  Unknown7 unknown7 = 7;
  repeated Payload payload = 100;
  string errorMessage = 101; //Should be moved to an error-proto file if error is always 101 field

  message Unknown6 {
    int32 unknown1 = 1;
    Unknown2 unknown2 = 2;

    message Unknown2 {
      bytes unknown1 = 1;
    }

  }

  message Unknown7 {
    bytes unknown71 = 1;
    int64 unknown72 = 2;
    bytes unknown73 = 3;
  }

  message Payload {
    repeated ClientMapCell profile = 1;
	int32 unknownnumber = 2;
  
  message ClientMapCell {
    uint64 S2CellId = 1;
    int64 AsOfTimeMs = 2;
    repeated PokemonFortProto Fort = 3;
    repeated ClientSpawnPointProto SpawnPoint = 4;
    repeated WildPokemonProto WildPokemon = 5;
    //unknown DeletedObject = 6;
    bool IsTruncatedList = 7;
    repeated PokemonSummaryFortProto FortSummary = 8;
    repeated ClientSpawnPointProto DecimatedSpawnPoint = 9;
    repeated MapPokemonProto MapPokemon = 10;
    repeated NearbyPokemonProto NearbyPokemon = 11;
  }


  message WildPokemon {
    string UniqueId = 1;
    string PokemonId = 2;
    // int64 three = 3;
    // float four = 4;
    // int32 five = 5;
    // unknown six = 6;
    repeated NearbyPokemonProto pokemon = 11;
  }


  message MapPokemonProto {
    string SpawnpointId = 1;
    fixed64 EncounterId = 2;
    PokemonIds PokedexTypeId = 3;
    int64 ExpirationTimeMs = 4;
    double Latitude = 5;
    double Longitude = 6;
  }

  message PokemonFortProto {
    string FortId = 1;
    int64 LastModifiedMs = 2;
    double Latitude = 3;
    double Longitude = 4;
    int32 Team = 5;
    int32 GuardPokemonId = 6;
    int32 GuardPokemonLevel = 7;
    bool Enabled = 8;
    // ENUM.Holoholo.Rpc.FortType FortType = 9;
    int32 FortType = 9;
    int64 GymPoints = 10;
    bool IsInBattle = 11;
    //unknown ActiveFortModifier = 12;
    MapPokemonProto ActivePokemon = 13;
    int64 CooldownCompleteMs = 14;
    // ENUM.Holoholo.Rpc.Sponsor.Types.FortSponsor.Sponsor Sponsor = 15;
    int32 Sponsor = 15;
    // ENUM.Holoholo.Rpc.RenderingType.Types.FortRenderingType.RenderingType RenderingType = 16;
    int32 RenderingType = 16;
  }

  message PokemonSummaryFortProto {
    string FortSummaryId = 1;
    int64 LastModifiedMs = 2;
    double Latitude = 3;
    double Longitude = 4;
  }

  message ClientSpawnPointProto {
    double Latitude = 2;
    double Longitude = 3;
  }

  message WildPokemonProto {
    uint64 EncounterId = 1;
    int64 LastModifiedMs = 2;
    double Latitude = 3;
    double Longitude = 4;
    string SpawnPointId = 5;
    Pokemon pokemon = 7;
    int32 TimeTillHiddenMs = 11;

    message Pokemon {
    	uint64 Id = 1;
    	int32 PokemonId = 2;
    }
  }

  message NearbyPokemonProto {
    int32 PokedexNumber = 1;
    float DistanceMeters = 2;
    uint64 EncounterId = 3;
  }

  
	enum PokemonIds {
	POKEMON_UNSET = 0;
	V0001_POKEMON_BULBASAUR = 1;
	V0002_POKEMON_IVYSAUR = 2;
	V0003_POKEMON_VENUSAUR = 3;
	V0004_POKEMON_CHARMANDER = 4;
	V0005_POKEMON_CHARMELEON = 5;
	V0006_POKEMON_CHARIZARD = 6;
	V0007_POKEMON_SQUIRTLE = 7;
	V0008_POKEMON_WARTORTLE = 8;
	V0009_POKEMON_BLASTOISE = 9;
	V0010_POKEMON_CATERPIE = 10;
	V0011_POKEMON_METAPOD = 11;
	V0012_POKEMON_BUTTERFREE = 12;
	V0013_POKEMON_WEEDLE = 13;
	V0014_POKEMON_KAKUNA = 14;
	V0015_POKEMON_BEEDRILL = 15;
	V0016_POKEMON_PIDGEY = 16;
	V0017_POKEMON_PIDGEOTTO = 17;
	V0018_POKEMON_PIDGEOT = 18;
	V0019_POKEMON_RATTATA = 19;
	V0020_POKEMON_RATICATE = 20;
	V0021_POKEMON_SPEAROW = 21;
	V0022_POKEMON_FEAROW = 22;
	V0023_POKEMON_EKANS = 23;
	V0024_POKEMON_ARBOK = 24;
	V0025_POKEMON_PIKACHU = 25;
	V0026_POKEMON_RAICHU = 26;
	V0027_POKEMON_SANDSHREW = 27;
	V0028_POKEMON_SANDSLASH = 28;
	V0029_POKEMON_NIDORAN = 29;
	V0030_POKEMON_NIDORINA = 30;
	V0031_POKEMON_NIDOQUEEN = 31;
	V0032_POKEMON_NIDORAN = 32;
	V0033_POKEMON_NIDORINO = 33;
	V0034_POKEMON_NIDOKING = 34;
	V0035_POKEMON_CLEFAIRY = 35;
	V0036_POKEMON_CLEFABLE = 36;
	V0037_POKEMON_VULPIX = 37;
	V0038_POKEMON_NINETALES = 38;
	V0039_POKEMON_JIGGLYPUFF = 39;
	V0040_POKEMON_WIGGLYTUFF = 40;
	V0041_POKEMON_ZUBAT = 41;
	V0042_POKEMON_GOLBAT = 42;
	V0043_POKEMON_ODDISH = 43;
	V0044_POKEMON_GLOOM = 44;
	V0045_POKEMON_VILEPLUME = 45;
	V0046_POKEMON_PARAS = 46;
	V0047_POKEMON_PARASECT = 47;
	V0048_POKEMON_VENONAT = 48;
	V0049_POKEMON_VENOMOTH = 49;
	V0050_POKEMON_DIGLETT = 50;
	V0051_POKEMON_DUGTRIO = 51;
	V0052_POKEMON_MEOWTH = 52;
	V0053_POKEMON_PERSIAN = 53;
	V0054_POKEMON_PSYDUCK = 54;
	V0055_POKEMON_GOLDUCK = 55;
	V0056_POKEMON_MANKEY = 56;
	V0057_POKEMON_PRIMEAPE = 57;
	V0058_POKEMON_GROWLITHE = 58;
	V0059_POKEMON_ARCANINE = 59;
	V0060_POKEMON_POLIWAG = 60;
	V0061_POKEMON_POLIWHIRL = 61;
	V0062_POKEMON_POLIWRATH = 62;
	V0063_POKEMON_ABRA = 63;
	V0064_POKEMON_KADABRA = 64;
	V0065_POKEMON_ALAKAZAM = 65;
	V0066_POKEMON_MACHOP = 66;
	V0067_POKEMON_MACHOKE = 67;
	V0068_POKEMON_MACHAMP = 68;
	V0069_POKEMON_BELLSPROUT = 69;
	V0070_POKEMON_WEEPINBELL = 70;
	V0071_POKEMON_VICTREEBEL = 71;
	V0072_POKEMON_TENTACOOL = 72;
	V0073_POKEMON_TENTACRUEL = 73;
	V0074_POKEMON_GEODUDE = 74;
	V0075_POKEMON_GRAVELER = 75;
	V0076_POKEMON_GOLEM = 76;
	V0077_POKEMON_PONYTA = 77;
	V0078_POKEMON_RAPIDASH = 78;
	V0079_POKEMON_SLOWPOKE = 79;
	V0080_POKEMON_SLOWBRO = 80;
	V0081_POKEMON_MAGNEMITE = 81;
	V0082_POKEMON_MAGNETON = 82;
	V0083_POKEMON_FARFETCHD = 83;
	V0084_POKEMON_DODUO = 84;
	V0085_POKEMON_DODRIO = 85;
	V0086_POKEMON_SEEL = 86;
	V0087_POKEMON_DEWGONG = 87;
	V0088_POKEMON_GRIMER = 88;
	V0089_POKEMON_MUK = 89;
	V0090_POKEMON_SHELLDER = 90;
	V0091_POKEMON_CLOYSTER = 91;
	V0092_POKEMON_GASTLY = 92;
	V0093_POKEMON_HAUNTER = 93;
	V0094_POKEMON_GENGAR = 94;
	V0095_POKEMON_ONIX = 95;
	V0096_POKEMON_DROWZEE = 96;
	V0097_POKEMON_HYPNO = 97;
	V0098_POKEMON_KRABBY = 98;
	V0099_POKEMON_KINGLER = 99;
	V0100_POKEMON_VOLTORB = 100;
	V0101_POKEMON_ELECTRODE = 101;
	V0102_POKEMON_EXEGGCUTE = 102;
	V0103_POKEMON_EXEGGUTOR = 103;
	V0104_POKEMON_CUBONE = 104;
	V0105_POKEMON_MAROWAK = 105;
	V0106_POKEMON_HITMONLEE = 106;
	V0107_POKEMON_HITMONCHAN = 107;
	V0108_POKEMON_LICKITUNG = 108;
	V0109_POKEMON_KOFFING = 109;
	V0110_POKEMON_WEEZING = 110;
	V0111_POKEMON_RHYHORN = 111;
	V0112_POKEMON_RHYDON = 112;
	V0113_POKEMON_CHANSEY = 113;
	V0114_POKEMON_TANGELA = 114;
	V0115_POKEMON_KANGASKHAN = 115;
	V0116_POKEMON_HORSEA = 116;
	V0117_POKEMON_SEADRA = 117;
	V0118_POKEMON_GOLDEEN = 118;
	V0119_POKEMON_SEAKING = 119;
	V0120_POKEMON_STARYU = 120;
	V0121_POKEMON_STARMIE = 121;
	V0122_POKEMON_MR_MIME = 122;
	V0123_POKEMON_SCYTHER = 123;
	V0124_POKEMON_JYNX = 124;
	V0125_POKEMON_ELECTABUZZ = 125;
	V0126_POKEMON_MAGMAR = 126;
	V0127_POKEMON_PINSIR = 127;
	V0128_POKEMON_TAUROS = 128;
	V0129_POKEMON_MAGIKARP = 129;
	V0130_POKEMON_GYARADOS = 130;
	V0131_POKEMON_LAPRAS = 131;
	V0132_POKEMON_DITTO = 132;
	V0133_POKEMON_EEVEE = 133;
	V0134_POKEMON_VAPOREON = 134;
	V0135_POKEMON_JOLTEON = 135;
	V0136_POKEMON_FLAREON = 136;
	V0137_POKEMON_PORYGON = 137;
	V0138_POKEMON_OMANYTE = 138;
	V0139_POKEMON_OMASTAR = 139;
	V0140_POKEMON_KABUTO = 140;
	V0141_POKEMON_KABUTOPS = 141;
	V0142_POKEMON_AERODACTYL = 142;
	V0143_POKEMON_SNORLAX = 143;
	V0144_POKEMON_ARTICUNO = 144;
	V0145_POKEMON_ZAPDOS = 145;
	V0146_POKEMON_MOLTRES = 146;
	V0147_POKEMON_DRATINI = 147;
	V0148_POKEMON_DRAGONAIR = 148;
	V0149_POKEMON_DRAGONITE = 149;
	V0150_POKEMON_MEWTWO = 150;
	V0151_POKEMON_MEW = 151;
}

  }
  }